--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Treinamento de modelos de IA</h5>
                         <p class="card-text">Treinamento de um modelo LSTM com bases da área da saúde</p>
-                        <a href="#" class="btn btn-primary">Ver Projeto</a>
+                        <a href="https://github.com/KaikyDegasperi/LSTMtreino/blob/main/LSTMSemOverfiting.ipynb" class="btn btn-primary">Ver Projeto</a>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Dashboard</h5>
                         <p class="card-text">Análise de distribuição de renda por cidade</p>
-                        <a href="#" class="btn btn-primary">Ver Projeto</a>
+                        <a href="https://github.com/KaikyDegasperi/dashboard" class="btn btn-primary">Ver Projeto</a>
                     </div>
                 </div>
             </div>
