--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container text-white">
                 <h2 class="text-center mb-4">Sobre Mim</h2>
                 <p class="lead text-center">
-                    Sou Victor Degasperi, desenvolvedor Python, Web Fullstack e Analista de Dados.
+                    Sou Victor Degasperi, desenvolvedor Python, matemático e engenheiro de software, Web Fullstack e Analista de Dados.
                     Tenho experiência em criação de APIs, automação de processos e análise de dados.
                     Apaixonado por resolver problemas complexos e criar soluções eficientes.
                 </p>
@@ -177,7 +177,10 @@
                         <div class="skill text-center">
                             <i class="devicon-django-plain colored skill-icon"></i>
                             <p>
-                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" alt="Django Logo" class="skill-icon">
+
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/django/django-plain-wordmark.svg" alt="Django Logo" class="skill-icon"/>
+          
+                    
                             </p>
                             <p class="carousel-text">Framework web em Python usado para criar aplicações robustas e seguras, com suporte para back-end completo e integração com bancos de dados.</p>
                         </div>
